<resources>
    <string name="app_name" translatable="false">MiniShop</string>
    <string name="image_description" translatable="false">Shoes</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="_0" translatable="false">0</string>
    <string name="create_account">Create Account</string>"
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="continue_button">Continue</string>
    <string name="order_product">Order Now</string>
    <string name="product_shoes">Shoes</string>


</resources>