<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".OrderActivity">


    <Button
        android:id="@+id/orderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/order_product"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/img_shoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/product_shoes"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage" />


    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_small_button"
        android:drawableStart="@drawable/ic_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/minusButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_small_button"
        android:text="@string/minus"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toStartOf="@+id/productAmount"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/shape_small_button"
        android:text="@string/plus"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintStart_toEndOf="@+id/productAmount"
        app:layout_constraintTop_toBottomOf="@+id/productName" />


    <TextView
        android:id="@+id/productAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/_0"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName" />


</androidx.constraintlayout.widget.ConstraintLayout>